<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="3dp"
        android:text="Escolha o nível"
        android:textAlignment="center"
        android:textColor="@color/cinza"
        android:textSize="22dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180px"
        android:layout_marginTop="70px"
        android:orientation="horizontal"
        android:id="@+id/linearLayout5">

        <Button
            android:id="@+id/btn1"
            android:layout_width="165px"
            android:layout_height="165px"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView2"
            android:layout_marginLeft="10px"
            android:background="@drawable/button_shape"
            android:backgroundTint="@color/azul1"
            android:text="a+b=?"
            android:textColor="@color/branco" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="165px"
            android:layout_height="165px"
            android:layout_alignBaseline="@+id/btn1"
            android:layout_alignBottom="@+id/btn1"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@+id/btn1"
            android:layout_toRightOf="@+id/btn1"
            android:background="@drawable/button_shape"
            android:backgroundTint="@color/vermelho1"
            android:text="a-b=?"
            android:textColor="@color/branco" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="165px"
            android:layout_height="165px"
            android:layout_above="@+id/btn5"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@+id/btn2"
            android:layout_toRightOf="@+id/btn2"
            android:background="@drawable/button_shape"
            android:backgroundTint="@color/verde1"
            android:text="@string/btn3"
            android:textColor="@color/branco" />

        <Button
            android:id="@+id/btn4"
            android:layout_width="165px"
            android:layout_height="165px"
            android:layout_alignBaseline="@+id/btn3"
            android:layout_alignBottom="@+id/btn3"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10px"
            android:layout_marginStart="5dp"
            android:layout_toRightOf="@+id/btn3"
            android:background="@drawable/button_shape"
            android:backgroundTint="@color/amarelo1"
            android:text="@string/btn4"
            android:textColor="@color/branco" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180px"
        android:layout_marginTop="335px"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn5"
            android:layout_width="165px"
            android:layout_height="165px"
            android:layout_below="@+id/btn1"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10px"
            android:background="@drawable/button_shape"
            android:backgroundTint="@color/roxo"
            android:text="a+b+c=?"
            android:textColor="@color/branco" />

        <Button
            android:id="@+id/btn6"
            android:layout_width="165px"
            android:layout_height="165px"
            android:layout_alignBaseline="@+id/btn5"
            android:layout_alignBottom="@+id/btn5"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@+id/textView2"
            android:layout_toRightOf="@+id/textView2"
            android:background="@drawable/button_shape"
            android:backgroundTint="@color/laranja"
            android:text="a+b-c=?"
            android:textColor="@color/branco" />

        <Button
            android:id="@+id/btn7"
            android:layout_width="165px"
            android:layout_height="165px"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/button_shape"
            android:backgroundTint="@color/roza"
            android:text="@string/btn7"
            android:textColor="@color/branco" />

        <Button
            android:id="@+id/btn8"
            android:layout_width="165px"
            android:layout_height="165px"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10px"
            android:layout_marginStart="5dp"
            android:background="@drawable/button_shape"
            android:backgroundTint="@color/azul2"
            android:text="@string/btn8"
            android:textColor="@color/branco" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180px"
        android:layout_marginTop="630px"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn9"
            android:layout_width="165px"
            android:layout_height="165px"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/button_shape"
            android:backgroundTint="@color/azul2"
            android:text="@string/btn9"
            android:textColor="@color/branco" />

        <Button
            android:id="@+id/btn10"
            android:layout_width="165px"
            android:layout_height="165px"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/button_shape"
            android:backgroundTint="@color/roza"
            android:text="@string/btn10"
            android:textColor="@color/branco" />

        <Button
            android:id="@+id/btn11"
            android:layout_width="165px"
            android:layout_height="165px"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/button_shape"
            android:backgroundTint="@color/laranja"
            android:text="@string/btn11"
            android:textColor="@color/branco" />

        <Button
            android:id="@+id/btn12"
            android:layout_width="165px"
            android:layout_height="165px"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10px"
            android:layout_marginStart="5dp"
            android:background="@drawable/button_shape"
            android:backgroundTint="@color/roxo"
            android:text="@string/btn12"
            android:textColor="@color/branco" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180px"
        android:layout_marginTop="830px"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn13"
            android:layout_width="165px"
            android:layout_height="165px"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/button_shape"
            android:backgroundTint="@color/laranja"
            android:text="@string/btn13"
            android:textColor="@color/branco" />

        <Button
            android:id="@+id/btn14"
            android:layout_width="165px"
            android:layout_height="165px"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/button_shape"
            android:backgroundTint="@color/verde2"
            android:text="@string/btn14"
            android:textColor="@color/branco" />

        <Button
            android:id="@+id/btn15"
            android:layout_width="165px"
            android:layout_height="165px"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/button_shape"
            android:backgroundTint="@color/roxo"
            android:text="@string/btn15"
            android:textColor="@color/branco" />

        <Button
            android:id="@+id/btn16"
            android:layout_width="165px"
            android:layout_height="165px"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10px"
            android:layout_marginStart="5dp"
            android:background="@drawable/button_shape"
            android:backgroundTint="@color/verde3"
            android:text="@string/btn16"
            android:textColor="@color/branco" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout5"
        android:layout_marginTop="0dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/txtPontuacaoAct1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="38dp"
            android:layout_marginTop="5dp"
            android:text=""
            android:textAlignment="center"
            android:textColor="@color/cinza"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>